# iotedgeplugins-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  generate.sh
common/include/: dataset.h  drop.h  util.h
examples/device_drop_processor/: CMakeLists.txt
examples/device_drop_processor/include/: server.h
examples/device_drop_processor/src/: main.cpp  server.cpp
examples/device_event_processor/: CMakeLists.txt
examples/device_event_processor/include/: server.h
examples/device_event_processor/src/: main.cpp  server.cpp
examples/generator/: CMakeLists.txt
examples/generator/include/: server.h
examples/generator/src/: main.cpp  server.cpp
protos/driverplugin/: driverplugin.proto
